--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -26,23 +26,43 @@ body {
                     list-style: none;
                     margin-right: 40px;
                     > a {
-                        text-decoration: #222;
+                        text-decoration: none;
+                        color: #222;
                         font-weight: bold;
                     }
                 }
             }
         }
-        button {
-            width: 290px;
-            height: 40px;
-            border: none;
-            text-transform: uppercase;
-            color: #333;
-            background: #FFE45C;
-            font-size: 0.8em;
-            border-radius: 20px;
+        &.footer-link-a{
+            > nav > ul > li > a {
+                color: #fff;
+            }
         }
     }
+}
+button.disabled {
+    background: none;
+    border : solid 0.5px rgba(36,36,36, 0.8);
+}
+
+button.disabled:hover {
+    background: rgba(36,36,36,0.2);
+}
+
+button {
+    width: 290px;
+    height: 40px;
+    border: none;
+    text-transform: uppercase;
+    color: #333;
+    background: linear-gradient(150deg, #FFE45C 0%, #ffc900 100%);
+    font-size: 0.8em;
+    border-radius: 20px;
+}
+button:hover{
+    background: linear-gradient(150deg, #ffe978 0%, #fbd033 100%);
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.5);
+    cursor: pointer;
 }
 .jss4 ,.jss6 {
     fill: hsla(0, 0%, 14%, 1);
@@ -51,6 +71,73 @@ body {
     width: auto;
     height: 24px;
 }
-@media screen {
-    
+
+.full-banner{
+    width: 100%;
+    height: 100vh;
+    background: url("../images/c6/hero-bg-xs.webp") no-repeat;
+    background-size: cover;
+    background-position: center center;
+    .destak{
+        width: 40%;
+        height: 60vh;
+        position: absolute;
+        bottom: 5%;
+        left: 15%;
+        > h1{
+            font-size: 3.5em;
+            line-height: 1em;
+            font-weight: 300;
+            margin-bottom: 5%;
+            margin-top: 2%;
+        }
+        h2, h3{
+            margin: 0;
+        }
+        h2{
+            width: 80%;
+            font-weight: 300;
+            margin-bottom: 5%;
+        }
+        h3{
+            width: 90%;
+            background: rgba(36,36,36,0.35);
+            color: #fff;
+            font-weight: normal;
+            font-size: 0.8em;
+            line-height: 3em;
+            border-radius: 25px;
+            padding: 0 2%;
+            span{
+                //elemento de linha
+
+                //mudando o tipo de elemento dele
+                display: inline-block; 
+                width: fit-content;
+                background: #006d8f;
+                padding: 0 3px;
+                border-radius: 25px;
+                line-height: 1.6em;
+            }
+        }
+    }
+}
+// breakpoints sao numeros que usamos para definir 
+//em que momento muda o css dependendo da tela
+//smarthphone - nenhuma
+//smarthphone landscape - 576px
+// tablet - 768px
+//desktop - 992 px - 1200 ou 1280px
+// desktop grande - 1400px, 1600, 1920px
+
+// 768 e 1280 são os mais usados
+
+/*Desktop*/
+@media (min-width: 992px) {
+    .full-banner{
+        background-image: url("../images/c6/hero-bg-desktopWIDE.webp");
+        background-size: cover;
+        background-position: right 0px;
+        background-repeat: no-repeat;
+    }
 }
